Fix video section full-width positioning
- Used proper full-width technique with left: 50% and negative margins
- This should break the video section out of container constraints
- Video should now span full screen width properly

--- a/TetraltoDjango/static/css/components.css
+++ b/TetraltoDjango/static/css/components.css
@@ -1438,10 +1438,13 @@ img {
 /* Video Section Styles */
 .video-section {
     width: 100vw;
-    margin-left: calc(-50vw + 50%);
+    position: relative;
+    left: 50%;
+    right: 50%;
+    margin-left: -50vw;
+    margin-right: -50vw;
     padding: 2rem 0;
     background: #000;
-    position: relative;
 }
 
 .video-wrapper {
